# AX

./: .gitignore  CMakeLists.txt  DynamicMatrix.hpp  DynamicVector.hpp  DynamicVectorExp.hpp  Expression.hpp  LinearAlgebra.hpp  Matrix.hpp  MatrixVectorMultiplication.hpp  README.md  Vector.hpp  Vector3.hpp  VectorExp.hpp  VectorRotation.cpp  VectorRotation.hpp  io.hpp
ax/core/: calculator.hpp  dimension.hpp  dynamic_column_vector.hpp  dynamic_row_vector.hpp  expression.hpp  matrix.hpp  matrix_traits.hpp  operator.hpp  scalar_type_of.hpp  static_column_vector.hpp  static_matrix.hpp  static_row_vector.hpp  tags.hpp  vector.hpp  vector_traits.hpp
ax/util/: is_all.hpp
src/: Dimension.hpp  DynamicMatrix.hpp  DynamicMatrixExp.hpp  DynamicVector.hpp  Expression.hpp  InverseMatrix.hpp  JacobiMethod.hpp  LUDecomposition.hpp  Matrix.hpp  MatrixExp.hpp  MatrixExpression.hpp  MatrixVectorMultiplication.hpp  OperatorStructs.hpp  TypeTraits.hpp  Vector.hpp  Vector3.hpp  Vector3AVX.hpp  VectorExp.hpp  VectorExpression.hpp  VectorRotation.hpp  io.hpp  util.hpp
test/: .gitignore  CMakeLists.txt  test_2or3_inverse_matrix.cpp  test_3DAVXvector.cpp  test_3Dvector.cpp  test_Defs.hpp  test_JacobiMethod.cpp  test_LUDecomposition.cpp  test_dimension.cpp  test_dynamic_matrix.cpp  test_dynamic_vector.cpp  test_static_matrix.cpp  test_static_vector.cpp  test_type_traits.cpp  test_vector_matrix.cpp
